--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -15,10 +15,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.3",
+    "@angular/cdk": "^14.1.3",
     "@angular/common": "^14.1.3",
     "@angular/compiler": "^14.1.3",
     "@angular/core": "^14.1.3",
+    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.1.3",
+    "@angular/material": "^14.1.3",
     "@angular/platform-browser": "^14.1.3",
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/platform-server": "^14.1.3",
@@ -51,6 +54,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
