feat(catalog) more logic than should be in a single commit. Whoops

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=LibraryApiDb;User=sa;Password=SecurePasswordForDb123!@#;MultipleActiveResultSets=true;Encrypt=False;"
+    "DefaultConnection": "Server=localhost;Database=LibraryAppDb;User=sa;Password=SecurePasswordForDb123!@#;MultipleActiveResultSets=true;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
