feature(auth) setup pipeline auth

--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LibraryAppDb;User=sa;Password=SecurePasswordForDb123!@#;MultipleActiveResultSets=true;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
