--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,29 @@
                 "${workspaceFolder}/src/WebUI/WebUI.csproj"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
+        { 
+            "label": ".NET Core Test with debugger", 
+            "type": "process", 
+            "isBackground": true, 
+            "command": "dotnet", 
+            "args": [ "test" ], 
+            "options": 
+                { 
+                    "cwd": "${workspaceFolder}/tests/Application.IntegrationTests", 
+                    "env": 
+                    { 
+                        "VSTEST_HOST_DEBUG": "1" 
+                    }, 
+                }, 
+            "group": "test", "presentation": 
+                { 
+                    "echo": true,
+                    "reveal": "always",
+                    "focus": false,
+                    "panel": "shared"
+                },
+            "problemMatcher": [] 
+        },
     ]
 }
